k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  selector:
    matchLabels:
      app: express-hello-world
  replicas: 1
  template:
    metadata:
      labels:
        app: express-hello-world
    spec:
      containers:
      - name: express-hello-world
        image: diangogav/express-hello-world:three
        ports:
        - containerPort: 80
