k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-hello-world
spec:
  selector:
    app: express-hello-world
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
