k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-hello-world
spec:
  tls:
  - hosts:
      - ec2-18-218-89-156.us-east-2.compute.amazonaws.com
    secretName: testsecret-tls
  rules:
  - host: ec2-18-218-89-156.us-east-2.compute.amazonaws.com
    http:
      paths:
      - path: /alpha/
        pathType: Prefix
        backend:
          service:
            name: express-hello-world
            port:
              number: 3000
